--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="red">#FF0000</color>
     <color name="black">#000000</color>
     <color name="gray">#999999</color>
+    <color name="green">#00FF0A</color>
 </resources>
