--- a/app/src/main/res/layout/activity_edit_article.xml
+++ b/app/src/main/res/layout/activity_edit_article.xml
@@ -153,7 +153,7 @@
         tools:layout_editor_absoluteY="617dp" />
 
     <Button
-        android:id="@+id/btnSigIn"
+        android:id="@+id/btnsave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
