--- a/app/src/main/res/layout/activity_delete_article.xml
+++ b/app/src/main/res/layout/activity_delete_article.xml
@@ -95,6 +95,18 @@
             android:layout_centerVertical="true"
             android:text="Eliminar artículo"
             app:backgroundTint="@color/red" />
+        <Button
+            android:id="@+id/btnBefore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            app:backgroundTint="@color/gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/before" />
 
     </LinearLayout>
 
