--- a/app/src/main/res/layout/activity_sig_in.xml
+++ b/app/src/main/res/layout/activity_sig_in.xml
@@ -14,18 +14,6 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-53dp">
 
-
-    <TextView
-        android:id="@+id/sigIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/sig_in"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        tools:layout_editor_absoluteX="135dp"
-        tools:layout_editor_absoluteY="16dp" />
-
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
@@ -156,6 +144,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:digits="1234567890"
         tools:layout_editor_absoluteX="84dp"
         tools:layout_editor_absoluteY="617dp" />
 
@@ -163,8 +152,6 @@
         android:id="@+id/btnSigIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:text="@string/sig_in"
         app:backgroundTint="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -173,6 +160,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
+
+        <Button
+            android:id="@+id/btnBefore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            app:backgroundTint="@color/gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/before" />
 
         <AutoCompleteTextView
             android:id="@+id/edit_ip"
