--- a/app/src/main/res/layout/activity_sig_in.xml
+++ b/app/src/main/res/layout/activity_sig_in.xml
@@ -148,6 +148,13 @@
         tools:layout_editor_absoluteX="84dp"
         tools:layout_editor_absoluteY="617dp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            >
+
     <Button
         android:id="@+id/btnSigIn"
         android:layout_width="wrap_content"
@@ -160,6 +167,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
+
 
         <Button
             android:id="@+id/btnBefore"
@@ -174,6 +182,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/before" />
 
+    </LinearLayout>
         <AutoCompleteTextView
             android:id="@+id/edit_ip"
             android:layout_width="0dp"
